# hospital-management-system-backend

./: .env.example  Cargo.toml  drop_all_tables.sql  package-lock.json
migrations/: 01_create_tables.sql  02_init_data.sql
src/: error.rs  main.rs  models.rs
src/db/: appointment.rs  authentication.rs  doctor.rs  medical_record.rs  medicine.rs  mod.rs  patient.rs  payment.rs  service.rs  specialty.rs
src/middleware/: auth.rs
src/routers/: appointment.rs  authentication.rs  mod.rs  patient.rs  payment.rs  specialty.rs
src/routes/: admin.rs  appointment.rs  authentication.rs  doctor.rs  medical_record.rs  medicine.rs  mod.rs  patient.rs  payment.rs  service.rs  specialty.rs
