[package]
name = "hospital_management_system_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
warp = "0.3"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rust_decimal = "1.30"
